lesson-05/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
      - name: otus-app
        image: 1vandev/otus-app:v2
        resources:
          limits:
            memory: "64Mi"
            cpu: "500m"
        ports:
          - name: web
            containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 6
        readinessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 15
          periodSeconds: 10
