lesson-05/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
