lesson-05/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/ivan-shpyakin($|/)(.*)
        pathType: Prefix
        backend:
          service:
            name: otus-app-service
            port:
              number: 8000
